force-app/main/default/objects/ER_Bank_Account__c/fields/ER_Client_Merchant__c.field-meta.xml
<CustomField>
    <fullName>ER_Client_Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client / Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>