force-app/main/default/objects/ER_Bank_Account__c/fields/ERAT_IBAN__c.field-meta.xml
<CustomField>
    <fullName>ERAT_IBAN__c</fullName>
    <description>IBAN (20 chars in Austria)</description>
    <label>IBAN</label>
    <length>22</length>
    <type>Text</type>
</CustomField>