force-app/main/default/objects/ER_Bank_Account__c/fields/ERAT_MandateAuthorizationEndDate__c.field-meta.xml
<CustomField>
    <fullName>ERAT_MandateAuthorizationEndDate__c</fullName>
    <label>Mandate - Authorization End Date</label>
    <type>Date</type>
</CustomField>