force-app/main/default/objects/ER_Bank_Account__c/fields/ERAT_MandateAuthorizationMethod__c.field-meta.xml
<CustomField>
    <fullName>ERAT_MandateAuthorizationMethod__c</fullName>
    <label>Mandate - Autorization Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>CORE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>