force-app/main/default/objects/ER_Bank_Account__c/fields/ERAT_MandateAuthorizationReferenceNo__c.field-meta.xml
<CustomField>
    <fullName>ERAT_MandateAuthorizationReferenceNo__c</fullName>
    <label>Mandate - Authorization Reference Number</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>