force-app/main/default/objects/ER_Bank_Account__c/fields/ERAT_MandateAuthorizationSigningDate__c.field-meta.xml
<CustomField>
    <fullName>ERAT_MandateAuthorizationSigningDate__c</fullName>
    <label>Mandate - Authorization Signing Date</label>
    <type>Date</type>
</CustomField>