force-app/main/default/objects/ER_Bank_Account__c/validationRules/ERATVR_BIC_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>ERATVR_BIC_Length</fullName>
    <active>true</active>
    <description>Check for BIC length (11 chars)</description>
    <errorConditionFormula>IF(  $User.ER_BypassVR__c , FALSE,
OR(
LEN( ER_BIC__c )&gt;11,
LEN( ER_BIC__c )&lt;8
))</errorConditionFormula>
    <errorDisplayField>ER_BIC__c</errorDisplayField>
    <errorMessage>BIC must be between 8 and 11 chars in length.</errorMessage>
</ValidationRule>