force-app/main/default/objects/ER_Bank_Account__c/validationRules/ERATVR_IBAN_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>ERATVR_IBAN_Length</fullName>
    <active>true</active>
    <description>Check for IBAN length (20 chars for AT, 22 chars for DE)</description>
    <errorConditionFormula>IF(  $User.ER_BypassVR__c , FALSE,
OR(
IF( 
   LEFT( ERAT_IBAN__c , 2) = &quot;DE&quot;, 
   LEN( ERAT_IBAN__c )&lt;&gt;22,
   LEN( ERAT_IBAN__c )&lt;&gt;20
) ,
NOT(
REGEX(  ERAT_IBAN__c  , &quot;[A-Z0-9]{1,100}&quot;)
)
)
)</errorConditionFormula>
    <errorDisplayField>ERAT_IBAN__c</errorDisplayField>
    <errorMessage>IBAN must have a length of 20 chars for Austria or 22 chars for Germany and may only be composed of numbers and characters.</errorMessage>
</ValidationRule>