force-app/main/default/objects/ER_Bank_Account__c/validationRules/ERATVR_MandateEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ERATVR_MandateEndDate</fullName>
    <active>true</active>
    <description>The authorization end date must be later than the signing date.</description>
    <errorConditionFormula>IF(
   NOT(ISBLANK( ERAT_MandateAuthorizationEndDate__c )),
   ERAT_MandateAuthorizationEndDate__c &lt;  ERAT_MandateAuthorizationSigningDate__c ,
   FALSE
)</errorConditionFormula>
    <errorDisplayField>ERAT_MandateAuthorizationEndDate__c</errorDisplayField>
    <errorMessage>The authorization end date must be later than the signing date.</errorMessage>
</ValidationRule>